render code into browser after parsing

--- a/usage/index.html
+++ b/usage/index.html
@@ -6,6 +6,15 @@
     <title>Chitter</title>
   </head>
   <body>
+    <div
+      id="code"
+      style="
+        padding: 20px;
+        display: block;
+        background-color: #1a1a1a;
+        font-family: 'Cascadia Code', 'Roboto Mono', 'JetBrains Mono', monospace;
+      "
+    ></div>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
