--- a/usage/index.html
+++ b/usage/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chitter</title>
     <style>
+      body {
+        font-size: 18px;
+      }
+      .main-wrapper {
+        gap: 7px;
+      }
       .constant {
         color: #79c0ff !important;
       }
