--- a/usage/index.html
+++ b/usage/index.html
@@ -12,8 +12,41 @@
         gap: 7px;
       }
       .constant {
-        color: #79c0ff !important;
-        white-space: pre;
+        color: #79c0ff;
+      }
+      .instructions {
+        color: #ec8e2b;
+        font-weight: bold;
+      }
+      .plain {
+        color: #c8d1d9;
+      }
+      .jumps {
+        color: #c79af1;
+      }
+      .function-label {
+        color: #d2a8ff;
+        font-weight: bold;
+      }
+      .criticals {
+        color: #f47067;
+      }
+      .arithmetics {
+        color: yellowgreen;
+      }
+      .datatypes {
+        color: #8edb8c;
+      }
+      .registers {
+        color: #fdad54;
+        font-style: italic;
+      }
+      .operators {
+        color: #a492f7;
+      }
+      .comment {
+        color: rgb(107, 107, 107);
+        font-style: italic;
       }
     </style>
   </head>
